Add IdentityKey generator

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Schema\IResolver.cs" />
     <Compile Include="Schema\MartenSchemaException.cs" />
     <Compile Include="Schema\Resolver.cs" />
+    <Compile Include="Schema\Sequences\IdentityKeyGeneration.cs" />
     <Compile Include="Schema\Sequences\NoOpIdGeneration.cs" />
     <Compile Include="Schema\SubClassMapping.cs" />
     <Compile Include="Schema\EnsureDatabaseSchema.cs" />
