--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Session\document_session_find_json_Tests.cs" />
     <Compile Include="Session\document_session_load_not_yet_persisted_document_Tests.cs" />
     <Compile Include="Session\document_session_update_existing_document_without_dirty_checking_Tests.cs" />
+    <Compile Include="Session\get_raw_json_Tests.cs" />
     <Compile Include="StoreOptionsTests.cs" />
     <Compile Include="store_and_bulk_insert_by_mixed_bag_of_document_types_Tests.cs" />
     <Compile Include="TestingDocumentStore.cs" />
