first usage of the new IQueryHandler model in batch querying

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -85,8 +85,18 @@
     <Compile Include="Linq\MartenQueryProvider.cs" />
     <Compile Include="Linq\Handlers\IsOneOf.cs" />
     <Compile Include="Linq\QueryableExtensions.cs" />
+    <Compile Include="Linq\Results\AnyQueryHandler.cs" />
+    <Compile Include="Linq\Results\CountQueryHandler.cs" />
+    <Compile Include="Linq\Results\FirstHandler.cs" />
+    <Compile Include="Linq\Results\FirstOrDefaultHandler.cs" />
     <Compile Include="Linq\Results\IQueryHandler.cs" />
+    <Compile Include="Linq\Results\ListQueryHandler.cs" />
+    <Compile Include="Linq\Results\LoadByIdArrayHandler.cs" />
+    <Compile Include="Linq\Results\LoadByIdHandler.cs" />
     <Compile Include="Linq\Results\OnlyOneResultHandler.cs" />
+    <Compile Include="Linq\Results\SingleHandler.cs" />
+    <Compile Include="Linq\Results\SingleOrDefaultHandler.cs" />
+    <Compile Include="Linq\Results\UserSuppliedQueryHandler.cs" />
     <Compile Include="Linq\ScalarCommandBuilder.cs" />
     <Compile Include="Linq\ScalarSelector.cs" />
     <Compile Include="Linq\QueryPlan.cs" />
@@ -122,10 +132,12 @@
     <Compile Include="Services\BatchCommand.cs" />
     <Compile Include="Services\BatchQuerying\BatchedQuery.cs" />
     <Compile Include="Services\BatchQuerying\BatchedQueryable.cs" />
+    <Compile Include="Services\BatchQuerying\BatchQueryItem.cs" />
     <Compile Include="Services\BatchQuerying\IBatchedFetcher.cs" />
     <Compile Include="Services\BatchQuerying\IBatchedQueryable.cs" />
     <Compile Include="Services\BatchQuerying\IBatchedQuery.cs" />
     <Compile Include="Services\BatchQuerying\IBatchLoadByKeys.cs" />
+    <Compile Include="Services\BatchQuerying\IBatchQueryItem.cs" />
     <Compile Include="Services\BatchQuerying\TransformedBatchQueryable.cs" />
     <Compile Include="Services\ChangeSet.cs" />
     <Compile Include="Services\CommandRunnerMode.cs" />
