--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -90,15 +90,11 @@
     <Compile Include="Linq\QueryModelExtensions.cs" />
     <Compile Include="Linq\Results\AnyQueryHandler.cs" />
     <Compile Include="Linq\Results\CountQueryHandler.cs" />
-    <Compile Include="Linq\Results\FirstHandler.cs" />
-    <Compile Include="Linq\Results\FirstOrDefaultHandler.cs" />
     <Compile Include="Linq\Results\IQueryHandler.cs" />
     <Compile Include="Linq\Results\ListQueryHandler.cs" />
     <Compile Include="Linq\Results\LoadByIdArrayHandler.cs" />
     <Compile Include="Linq\Results\LoadByIdHandler.cs" />
-    <Compile Include="Linq\Results\OnlyOneResultHandler.cs" />
-    <Compile Include="Linq\Results\SingleHandler.cs" />
-    <Compile Include="Linq\Results\SingleOrDefaultHandler.cs" />
+    <Compile Include="Linq\Results\OneResultHandler.cs" />
     <Compile Include="Linq\Results\UserSuppliedQueryHandler.cs" />
     <Compile Include="Linq\ScalarCommandBuilder.cs" />
     <Compile Include="Linq\ScalarSelector.cs" />
