--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -70,32 +70,32 @@
     <Compile Include="Linq\DeserializeSelector.cs" />
     <Compile Include="Linq\ExpressionExtensions.cs" />
     <Compile Include="Linq\FindMembers.cs" />
-    <Compile Include="Linq\Handlers\EnumerableContains.cs" />
-    <Compile Include="Linq\Handlers\IMethodCallParser.cs" />
-    <Compile Include="Linq\Handlers\StringComparisonParser.cs" />
-    <Compile Include="Linq\Handlers\IsInGenericEnumerable.cs" />
-    <Compile Include="Linq\Handlers\MethodCallParser.cs" />
-    <Compile Include="Linq\Handlers\StringEquals.cs" />
-    <Compile Include="Linq\Handlers\StringEndsWith.cs" />
-    <Compile Include="Linq\Handlers\StringStartsWith.cs" />
-    <Compile Include="Linq\Handlers\StringContains.cs" />
+    <Compile Include="Linq\Parsing\EnumerableContains.cs" />
+    <Compile Include="Linq\Parsing\IMethodCallParser.cs" />
+    <Compile Include="Linq\Parsing\StringComparisonParser.cs" />
+    <Compile Include="Linq\Parsing\IsInGenericEnumerable.cs" />
+    <Compile Include="Linq\Parsing\MethodCallParser.cs" />
+    <Compile Include="Linq\Parsing\StringEquals.cs" />
+    <Compile Include="Linq\Parsing\StringEndsWith.cs" />
+    <Compile Include="Linq\Parsing\StringStartsWith.cs" />
+    <Compile Include="Linq\Parsing\StringContains.cs" />
     <Compile Include="Linq\ICompiledQuery.cs" />
     <Compile Include="Linq\IMartenQueryable.cs" />
     <Compile Include="Linq\IMartenQueryProvider.cs" />
     <Compile Include="Linq\IncludeSelector.cs" />
     <Compile Include="Linq\ISelector.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
-    <Compile Include="Linq\Handlers\IsOneOf.cs" />
+    <Compile Include="Linq\Parsing\IsOneOf.cs" />
     <Compile Include="Linq\QueryableExtensions.cs" />
     <Compile Include="Linq\QueryModelExtensions.cs" />
-    <Compile Include="Linq\Results\AnyQueryHandler.cs" />
-    <Compile Include="Linq\Results\CountQueryHandler.cs" />
-    <Compile Include="Linq\Results\IQueryHandler.cs" />
-    <Compile Include="Linq\Results\ListQueryHandler.cs" />
-    <Compile Include="Linq\Results\LoadByIdArrayHandler.cs" />
-    <Compile Include="Linq\Results\LoadByIdHandler.cs" />
-    <Compile Include="Linq\Results\OneResultHandler.cs" />
-    <Compile Include="Linq\Results\UserSuppliedQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\AnyQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\CountQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\IQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\ListQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\LoadByIdArrayHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\LoadByIdHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\OneResultHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\UserSuppliedQueryHandler.cs" />
     <Compile Include="Linq\ScalarCommandBuilder.cs" />
     <Compile Include="Linq\ScalarSelector.cs" />
     <Compile Include="Linq\QueryPlan.cs" />
