--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Linq\Parsing\IsOneOf.cs" />
     <Compile Include="Linq\QueryableExtensions.cs" />
     <Compile Include="Linq\QueryHandlers\AggregateQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\EnumerableQueryHandler.cs" />
     <Compile Include="Linq\QueryHandlers\QueryHandlerFactory.cs" />
     <Compile Include="Linq\QueryModelExtensions.cs" />
     <Compile Include="Linq\QueryHandlers\AnyQueryHandler.cs" />
