Re-arranged some code around the compiled queries

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -64,7 +64,6 @@
     <Compile Include="LinqExtensions.cs" />
     <Compile Include="Linq\BadLinqExpressionException.cs" />
     <Compile Include="Linq\CollectionAnyContainmentWhereFragment.cs" />
-    <Compile Include="Linq\CompiledQueryExecutor.cs" />
     <Compile Include="Linq\CompiledQueryMemberExpressionVisitor.cs" />
     <Compile Include="Linq\ContainmentWhereFragment.cs" />
     <Compile Include="Linq\DbParameterSetter.cs" />
@@ -91,6 +90,8 @@
     <Compile Include="Linq\Parsing\IsOneOf.cs" />
     <Compile Include="Linq\QueryableExtensions.cs" />
     <Compile Include="Linq\QueryHandlers\AggregateQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\CachedQuery.cs" />
+    <Compile Include="Linq\QueryHandlers\CachedQueryHandler.cs" />
     <Compile Include="Linq\QueryHandlers\EnumerableQueryHandler.cs" />
     <Compile Include="Linq\QueryHandlers\QueryHandlerFactory.cs" />
     <Compile Include="Linq\QueryModelExtensions.cs" />
