--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Bugs\Bug_237_duplicate_indexing_Tests.cs" />
     <Compile Include="Bugs\Bug_261_double_take_or_skip.cs" />
     <Compile Include="Bugs\Bug_276_Query_by_abstract_type_in_hierarchy.cs" />
+    <Compile Include="Events\Projections\AggregationStepTests.cs" />
     <Compile Include="IntDoc.cs" />
     <Compile Include="IntegratedFixture.cs" />
     <Compile Include="Bugs\Bug_274_cyclic_dependency_found_Tests.cs" />
