--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Events\EventStream.cs" />
     <Compile Include="Events\Projections\AggregationStep.cs" />
     <Compile Include="Events\Projections\Aggregator.cs" />
+    <Compile Include="Events\Projections\IAggregation.cs" />
+    <Compile Include="Events\Projections\IProjection.cs" />
     <Compile Include="Events\Projections\ProjectionClasses.cs" />
     <Compile Include="Generation\TableDiff.cs" />
     <Compile Include="IDiagnostics.cs" />
