--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -57,8 +57,10 @@
     <Compile Include="Events\Projections\AggregationStep.cs" />
     <Compile Include="Events\Projections\Aggregator.cs" />
     <Compile Include="Events\Projections\IAggregation.cs" />
+    <Compile Include="Events\Projections\IAggregationFinder.cs" />
     <Compile Include="Events\Projections\IProjection.cs" />
     <Compile Include="Events\Projections\ProjectionClasses.cs" />
+    <Compile Include="Events\Projections\SimpleAggregationFinder.cs" />
     <Compile Include="Generation\TableDiff.cs" />
     <Compile Include="IDiagnostics.cs" />
     <Compile Include="IDocumentSessionListener.cs" />
