--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -53,10 +53,12 @@
     <Compile Include="Events\EventStore.cs" />
     <Compile Include="Events\EventStoreAdmin.cs" />
     <Compile Include="Events\EventStream.cs" />
+    <Compile Include="Events\IEventStoreConfiguration.cs" />
     <Compile Include="Events\Projections\AggregationStep.cs" />
     <Compile Include="Events\Projections\Aggregator.cs" />
     <Compile Include="Events\Projections\IAggregation.cs" />
     <Compile Include="Events\Projections\IAggregationFinder.cs" />
+    <Compile Include="Events\Projections\IAggregator.cs" />
     <Compile Include="Events\Projections\IProjection.cs" />
     <Compile Include="Events\Projections\ProjectionClasses.cs" />
     <Compile Include="Events\Projections\SimpleAggregationFinder.cs" />
