added AggregationQueryHandler to do live aggregations

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ConnectionFactory.cs" />
     <Compile Include="DocumentStore.cs" />
     <Compile Include="DocumentTracking.cs" />
+    <Compile Include="Events\AggregationQueryHandler.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Events\EventQueryHandler.cs" />
     <Compile Include="Events\EventSelector.cs" />
