--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Events\Projections\AggregatorTests.cs" />
     <Compile Include="Events\Projections\QuestParty.cs" />
     <Compile Include="Events\Projections\SimpleAggregationFinderTests.cs" />
+    <Compile Include="fetching_stream_state.cs" />
     <Compile Include="IntDoc.cs" />
     <Compile Include="IntegratedFixture.cs" />
     <Compile Include="Bugs\Bug_274_cyclic_dependency_found_Tests.cs" />
