pulled Transforms out of EventStore

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Events\Projections\ProjectionClasses.cs" />
     <Compile Include="Events\Projections\SimpleAggregationFinder.cs" />
     <Compile Include="Events\StreamStateHandler.cs" />
+    <Compile Include="Events\Transforms.cs" />
     <Compile Include="Generation\TableDiff.cs" />
     <Compile Include="IDiagnostics.cs" />
     <Compile Include="IDocumentSessionListener.cs" />
