Added support for compiled query of an array of json objects [GH312]

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Linq\QueryHandlers\CachedQuery.cs" />
     <Compile Include="Linq\QueryHandlers\CachedQueryHandler.cs" />
     <Compile Include="Linq\QueryHandlers\EnumerableQueryHandler.cs" />
+    <Compile Include="Linq\QueryHandlers\JsonQueryHandler.cs" />
     <Compile Include="Linq\QueryHandlers\QueryHandlerFactory.cs" />
     <Compile Include="Linq\QueryModelExtensions.cs" />
     <Compile Include="Linq\QueryHandlers\AnyQueryHandler.cs" />
@@ -128,6 +129,8 @@
     <Compile Include="Linq\SingleFieldSelector.cs" />
     <Compile Include="Linq\StringSelector.cs" />
     <Compile Include="Linq\TargetObject.cs" />
+    <Compile Include="Linq\ToJsonArrayExpressionNode.cs" />
+    <Compile Include="Linq\ToJsonArrayResultOperator.cs" />
     <Compile Include="Linq\WhereClauseVisitor.cs" />
     <Compile Include="Linq\WholeDocumentSelector.cs" />
     <Compile Include="QuerySession.cs" />
