--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Events\Projections\IAggregator.cs" />
     <Compile Include="Events\Projections\IProjection.cs" />
     <Compile Include="Events\Projections\ProjectionClasses.cs" />
-    <Compile Include="Events\Projections\SimpleAggregationFinder.cs" />
+    <Compile Include="Events\Projections\AggregateFinder.cs" />
     <Compile Include="Events\StreamStateHandler.cs" />
     <Compile Include="Events\Transforms.cs" />
     <Compile Include="Generation\TableDiff.cs" />
