basic statistics for more efficient paging. Closes GH-2

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Linq\invoking_queryable_through_to_list_async_Tests.cs" />
     <Compile Include="Linq\invoking_query_with_select_Tests.cs" />
     <Compile Include="Linq\ExpressionExtensionsTests.cs" />
+    <Compile Include="Linq\invoking_query_with_statistics.cs" />
     <Compile Include="Linq\previewing_the_command_from_a_queryable_Tests.cs" />
     <Compile Include="Linq\query_against_dateoffset_Tests.cs" />
     <Compile Include="Linq\query_for_json_format.cs" />
