--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -106,7 +106,6 @@
     <Compile Include="Linq\ISelector.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
     <Compile Include="Linq\Parsing\IsOneOf.cs" />
-    <Compile Include="Linq\QueryableExtensions.cs" />
     <Compile Include="Linq\QueryHandlers\AggregateQueryHandler.cs" />
     <Compile Include="Linq\QueryHandlers\CachedQuery.cs" />
     <Compile Include="Linq\QueryHandlers\CachedQueryHandler.cs" />
@@ -244,7 +243,7 @@
     <Compile Include="Services\TrackedEntity.cs" />
     <Compile Include="Services\TransactionState.cs" />
     <Compile Include="StoreOptions.cs" />
-    <Compile Include="Util\QueryableExtensions.cs" />
+    <Compile Include="QueryableExtensions.cs" />
     <Compile Include="Util\EnumerableExtensions.cs" />
     <Compile Include="Util\SerializerExtensions.cs" />
     <Compile Include="DocumentSession.cs" />
