--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Linq\WholeDocumentSelector.cs" />
     <Compile Include="QuerySession.cs" />
     <Compile Include="Schema\DbObjects.cs" />
+    <Compile Include="Schema\DocumentSchemaExtensions.cs" />
     <Compile Include="Schema\IDbObjects.cs" />
     <Compile Include="Schema\IdField.cs" />
     <Compile Include="Schema\IndexDef.cs" />
