--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Schema\IResolver.cs" />
     <Compile Include="Schema\MartenSchemaException.cs" />
     <Compile Include="Schema\Resolver.cs" />
+    <Compile Include="Schema\SchemaDiff.cs" />
     <Compile Include="Schema\SchemaObjects.cs" />
     <Compile Include="Schema\Sequences\IdentityKeyGeneration.cs" />
     <Compile Include="Schema\Sequences\NoOpIdGeneration.cs" />
