--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -137,7 +137,7 @@
     <Compile Include="Schema\DocumentSchemaExtensions.cs" />
     <Compile Include="Schema\IDbObjects.cs" />
     <Compile Include="Schema\IdField.cs" />
-    <Compile Include="Schema\IndexDef.cs" />
+    <Compile Include="Schema\ActualIndex.cs" />
     <Compile Include="Schema\QualifiedDatabaseName.cs" />
     <Compile Include="Schema\ColumnValue.cs" />
     <Compile Include="Schema\CombGuidIdGeneration.cs" />
