initial usage of the rolling buffer schema objects

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Events\Projections\MonsterSlayed.cs" />
     <Compile Include="Events\Projections\QuestParty.cs" />
     <Compile Include="Events\Projections\AggregateFinderTests.cs" />
+    <Compile Include="Events\working_with_the_rolling_buffer_objects.cs" />
     <Compile Include="Examples\event_store_quickstart.cs" />
     <Compile Include="Events\fetching_stream_state.cs" />
     <Compile Include="Fixtures\EventStore\InlineAggregationFixture.cs" />
