EventStreamStorage switches append sproc based on Event Store configuration options

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Events\EventStoreAdmin.cs" />
     <Compile Include="Events\EventStream.cs" />
     <Compile Include="Events\IEventStoreConfiguration.cs" />
+    <Compile Include="Events\IProjections.cs" />
     <Compile Include="Events\Projections\AggregationProjection.cs" />
     <Compile Include="Events\Projections\AggregationStep.cs" />
     <Compile Include="Events\Projections\Aggregator.cs" />
