--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -258,6 +258,7 @@
     <Compile Include="StoreOptions.cs" />
     <Compile Include="QueryableExtensions.cs" />
     <Compile Include="Util\EnumerableExtensions.cs" />
+    <Compile Include="Util\LambdaBuilder.cs" />
     <Compile Include="Util\SerializerExtensions.cs" />
     <Compile Include="DocumentSession.cs" />
     <Compile Include="Util\TypeMappings.cs" />
