moved everything related to id's to its own namespace, new IdGenerator strategy

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -143,11 +143,12 @@
     <Compile Include="Schema\DbObjects.cs" />
     <Compile Include="Schema\DocumentSchemaExtensions.cs" />
     <Compile Include="Schema\IDbObjects.cs" />
+    <Compile Include="Schema\Identity\GuidIdGenerator.cs" />
     <Compile Include="Schema\IdField.cs" />
     <Compile Include="Schema\ActualIndex.cs" />
     <Compile Include="Schema\QualifiedDatabaseName.cs" />
     <Compile Include="Schema\ColumnValue.cs" />
-    <Compile Include="Schema\CombGuidIdGeneration.cs" />
+    <Compile Include="Schema\Identity\CombGuidIdGeneration.cs" />
     <Compile Include="Schema\DocumentAliasAttribute.cs" />
     <Compile Include="Schema\ForeignKeyAttribute.cs" />
     <Compile Include="Schema\ForeignKeyDefinition.cs" />
@@ -164,8 +165,10 @@
     <Compile Include="Schema\Resolver.cs" />
     <Compile Include="Schema\SchemaDiff.cs" />
     <Compile Include="Schema\SchemaObjects.cs" />
-    <Compile Include="Schema\Sequences\IdentityKeyGeneration.cs" />
-    <Compile Include="Schema\Sequences\NoOpIdGeneration.cs" />
+    <Compile Include="Schema\Identity\Sequences\IdentityKeyGeneration.cs" />
+    <Compile Include="Schema\Identity\Sequences\IntHiloGenerator.cs" />
+    <Compile Include="Schema\Identity\Sequences\LongHiloGenerator.cs" />
+    <Compile Include="Schema\Identity\NoOpIdGeneration.cs" />
     <Compile Include="Schema\SubClassMapping.cs" />
     <Compile Include="Schema\DatabaseSchemaGenerator.cs" />
     <Compile Include="Schema\UpsertFunction.cs" />
@@ -226,13 +229,13 @@
     <Compile Include="Schema\DuplicatedField.cs" />
     <Compile Include="Schema\DuplicatedFieldRole.cs" />
     <Compile Include="Schema\Field.cs" />
-    <Compile Include="Schema\GuidIdGeneration.cs" />
-    <Compile Include="Schema\IIdGeneration.cs" />
+    <Compile Include="Schema\Identity\GuidIdGeneration.cs" />
+    <Compile Include="Schema\Identity\IIdGeneration.cs" />
     <Compile Include="Schema\PostgresUpsertType.cs" />
-    <Compile Include="Schema\StringIdGeneration.cs" />
-    <Compile Include="Schema\Sequences\HiloIdGeneration.cs" />
+    <Compile Include="Schema\Identity\StringIdGeneration.cs" />
+    <Compile Include="Schema\Identity\Sequences\HiloIdGeneration.cs" />
     <Compile Include="Schema\IBulkLoader.cs" />
-    <Compile Include="Schema\IdAssignment.cs" />
+    <Compile Include="Schema\Identity\IdAssignment.cs" />
     <Compile Include="Schema\IDocumentCleaner.cs" />
     <Compile Include="Schema\IDocumentSchema.cs" />
     <Compile Include="Schema\IDocumentStorage.cs" />
@@ -244,11 +247,11 @@
     <Compile Include="Schema\PropertySearchingAttribute.cs" />
     <Compile Include="Schema\SchemaBuilder.cs" />
     <Compile Include="Schema\SearchableAttribute.cs" />
-    <Compile Include="Schema\Sequences\HiloSettings.cs" />
-    <Compile Include="Schema\Sequences\HiLoSequence.cs" />
-    <Compile Include="Schema\Sequences\ISequence.cs" />
-    <Compile Include="Schema\Sequences\ISequences.cs" />
-    <Compile Include="Schema\Sequences\SequenceFactory.cs" />
+    <Compile Include="Schema\Identity\Sequences\HiloSettings.cs" />
+    <Compile Include="Schema\Identity\Sequences\HiLoSequence.cs" />
+    <Compile Include="Schema\Identity\Sequences\ISequence.cs" />
+    <Compile Include="Schema\Identity\Sequences\ISequences.cs" />
+    <Compile Include="Schema\Identity\Sequences\SequenceFactory.cs" />
     <Compile Include="Schema\StorageArgument.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="Services\NulloIdentityMap.cs" />
