--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -184,7 +184,13 @@
     <Compile Include="Linq\query_with_nested_boolean_logic_Tests.cs" />
     <Compile Include="Linq\query_with_nullable_types_Tests.cs" />
     <Compile Include="Schema\DbObjectsTests.cs" />
+    <Compile Include="Schema\Identity\GuidIdGeneratorTests.cs" />
+    <Compile Include="Schema\Identity\IdentityKeyGenerationTests.cs" />
+    <Compile Include="Schema\Identity\NoOpIdGenerationTests.cs" />
     <Compile Include="Schema\SchemaDiff_Generation_Tests.cs" />
+    <Compile Include="Schema\Identity\Sequences\IntHiloGeneratorTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\LongHiloGeneratorTests.cs" />
+    <Compile Include="Schema\Identity\StringIdGenerationTester.cs" />
     <Compile Include="Schema\TableNameTests.cs" />
     <Compile Include="Services\Includes\end_to_end_query_with_compiled_include_Tests.cs" />
     <Compile Include="Services\SelectTransformerTests.cs" />
@@ -212,12 +218,12 @@
     <Compile Include="Schema\Hierarchies\generating_code_and_sql_for_hierarchy_smoke_Tests.cs" />
     <Compile Include="Schema\Hierarchies\HierarchyArgumentTests.cs" />
     <Compile Include="Schema\IndexDefinitionTests.cs" />
-    <Compile Include="Schema\Sequences\Bug_255_Hilo_table_being_erroneously_recreated.cs" />
-    <Compile Include="Schema\Sequences\CustomKeyGenerationTests.cs" />
-    <Compile Include="Schema\Sequences\Users.cs" />
-    <Compile Include="Schema\Sequences\DocumentIdStrategyTests.cs" />
-    <Compile Include="Schema\Sequences\CombGuidIdGenerationTests.cs" />
-    <Compile Include="Schema\Sequences\IdentityKeyGenerationTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\Bug_255_Hilo_table_being_erroneously_recreated.cs" />
+    <Compile Include="Schema\Identity\Sequences\CustomKeyGenerationTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\Users.cs" />
+    <Compile Include="Schema\Identity\Sequences\DocumentIdStrategyTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\CombGuidIdGenerationTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\IdentityKeyGenerationTests.cs" />
     <Compile Include="Schema\table_regeneration_with_new_searchable_fields_Tests.cs" />
     <Compile Include="Schema\when_deriving_the_table_definition_from_the_database_schema_Tests.cs" />
     <Compile Include="Schema\will_build_a_new_database_table_if_definition_changes_Tests.cs" />
@@ -259,9 +265,9 @@
     <Compile Include="Schema\JsonLocatorFieldTests.cs" />
     <Compile Include="Schema\ProductionModeSchemeCreationTests.cs" />
     <Compile Include="Schema\SchemaBuilderTests.cs" />
-    <Compile Include="Schema\Sequences\HiLoIdGenerationTests.cs" />
-    <Compile Include="Schema\Sequences\HiLoSequenceTests.cs" />
-    <Compile Include="Schema\Sequences\SequenceFactoryTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\HiLoIdGenerationTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\HiLoSequenceTests.cs" />
+    <Compile Include="Schema\Identity\Sequences\SequenceFactoryTests.cs" />
     <Compile Include="show_document_storage_code_in_diagnostics_Tests.cs" />
     <Compile Include="SpecificationExtensions.cs" />
     <Compile Include="TrackingSession\document_session_update_existing_documents_in_collection_Tests.cs" />
