--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -144,6 +144,8 @@
     <Compile Include="Schema\DocumentSchemaExtensions.cs" />
     <Compile Include="Schema\IDbObjects.cs" />
     <Compile Include="Schema\Identity\GuidIdGenerator.cs" />
+    <Compile Include="Schema\Identity\IdAssigner.cs" />
+    <Compile Include="Schema\Identity\IIdGenerator.cs" />
     <Compile Include="Schema\IdField.cs" />
     <Compile Include="Schema\ActualIndex.cs" />
     <Compile Include="Schema\QualifiedDatabaseName.cs" />
